--- a/index.html
+++ b/index.html
@@ -138,9 +138,14 @@
         </div>
         <div class="content">unavailable now, sorry!</div>
       </div>
-      <li class="lihp">
-        Học phần 8 - LẬP TRÌNH ỨNG DỤNG WEB CƠ BẢN, BẢO MẬT & HACK
-      </li>
+      <div class="hocphan">
+        <div class="hp-name">
+          <li class="lihp">
+            Học phần 8 - LẬP TRÌNH ỨNG DỤNG WEB CƠ BẢN, BẢO MẬT & HACK
+          </li>
+        </div>
+        <div class="content">unavailable now, sorry!</div>
+      </div>
     </ol>
   </body>
 </html>
